<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/Frame"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <RelativeLayout android:layout_alignParentTop="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/TopBar"
		 android:background="#1F8FFF"
		 android:layout_width="fill_parent">
		<TextView android:id="@+id/title_rss"
		 android:text="@string/title_rss"
		 android:textColor="#EEEEEE"
		 android:textSize="15sp"
		 android:padding="2px"
		 android:layout_alignParentLeft="true"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"/>
		<TextView android:layout_alignParentRight="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/title_uol"
		 android:text="@string/title_uol"
		 android:textColor="#EEEEEE"
		 android:textSize="15sp"
		 android:padding="2px"
		 android:layout_width="wrap_content"/>
  </RelativeLayout>
  <ScrollView android:id="@+id/ScrollView"
  		 android:layout_below="@id/TopBar"
  		 android:layout_above="@+id/BottomBar"
		 android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:background="#EBF6FB">
		 <LinearLayout android:layout_height="wrap_content"
		 android:id="@+id/LinearLayout" 
		 android:orientation="vertical"
		 android:layout_width="fill_parent">
		 	<TextView android:text="@string/rss_prompt"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_rss_prompt"/>
			<Button android:id="@+id/button_news_reader" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:text="@string/news_reader" />
		 	<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/rss_select"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_rss_select"/>
			<RadioGroup android:id="@+id/rg_rss" 
				android:orientation="vertical"
			 	android:layout_width="fill_parent"
			 	android:layout_height="wrap_content">
			 	<RadioButton android:id="@+id/rb_uol"
			 		android:layout_width="fill_parent"
			 		android:layout_height="wrap_content"
			 		android:text="@string/news_uol"
			 		android:textSize="20sp"
			 		android:textStyle="normal"
			 		android:textColor="#000000"/>
			 	<RadioButton android:id="@+id/rb_lib"
			 		android:layout_width="fill_parent"
			 		android:layout_height="wrap_content"
			 		android:text="@string/news_lib"
			 		android:textSize="20sp"
			 		android:textStyle="normal"
			 		android:textColor="#000000"/>
			</RadioGroup>>			 	
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
		 </LinearLayout>
	</ScrollView>
	<RelativeLayout
		 android:layout_alignParentBottom="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/BottomBar"
		 android:background="#DDD6C6"
		 android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/button_howto_rss" 
		 android:text="@string/howto"
		 android:layout_alignParentLeft="true"/>
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/button_add_subs"
		 android:textStyle="bold"
		 android:text="@string/add_subs"
		 android:layout_alignParentRight="true"/>
	</RelativeLayout>
</RelativeLayout>