<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/Frame"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <RelativeLayout android:layout_alignParentTop="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/TopBar"
		 android:background="#1F8FFF"
		 android:layout_width="fill_parent">
		<TextView android:id="@+id/title_portal"
		 android:text="@string/title_library"
		 android:textColor="#EEEEEE"
		 android:textSize="15sp"
		 android:padding="2px"
		 android:layout_alignParentLeft="true"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"/>
		<TextView android:layout_alignParentRight="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/title_uol"
		 android:text="@string/title_uol"
		 android:textColor="#EEEEEE"
		 android:textSize="15sp"
		 android:padding="2px"
		 android:layout_width="wrap_content"/>
  </RelativeLayout>
  <ScrollView android:id="@+id/ScrollView"
  		 android:layout_below="@id/TopBar"
  		 android:layout_above="@+id/BottomBar"
		 android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:background="#EBF6FB">
		<LinearLayout android:layout_height="wrap_content"
		 android:id="@+id/LinearLayout" 
		 android:orientation="vertical"
		 android:layout_width="fill_parent">
			<TextView android:text="@string/search_for"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_search_for"/>
			<EditText android:id="@+id/edit_search" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:focusable="true"
			 android:autoText="true"
			 android:editable="true"
			 android:singleLine="true" /> 
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/only_in"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_only_in"/>
			<Spinner android:id="@+id/spinner_only_in"
			 android:prompt="@string/only_in"
			 android:focusable="true"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:drawSelectorOnTop="true"/>
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/language"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_language"/>
			<Spinner android:id="@+id/spinner_language"
			 android:prompt="@string/language"
			 android:focusable="true"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:drawSelectorOnTop="true"/> 
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/material_type"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_material"/>
			<Spinner android:id="@+id/spinner_material"
			 android:prompt="@string/material_type"
			 android:focusable="true"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:drawSelectorOnTop="true"/>
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/> 
			<TextView android:text="@string/location"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_location"/>
			<Spinner android:id="@+id/spinner_location"
			 android:prompt="@string/location"
			 android:focusable="true"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:drawSelectorOnTop="true"/>
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/year_after"
			 	android:layout_height="wrap_content"
			 	android:layout_width="wrap_content"
			 	android:textSize="20sp"
			 	android:textStyle="normal"
			 	android:textColor="#000000"
			 	android:layout_margin="7dip"
			 	android:id="@+id/text_year_after"/>
			<EditText android:id="@+id/edit_after" 
			 	android:layout_height="wrap_content"
			 	android:layout_width="fill_parent"
			 	android:focusable="true"
			 	android:numeric="decimal"
			 	android:maxLength="4"
			 	android:editable="true"
			 	android:singleLine="true"/>
			<TextView android:text="@string/year_before"
			 	android:layout_height="wrap_content"
			 	android:layout_width="wrap_content"
			 	android:textSize="20sp"
			 	android:textStyle="normal"
			 	android:textColor="#000000"
			 	android:layout_margin="7dip"
			 	android:id="@+id/text_year_before"/>
			<EditText android:id="@+id/edit_before" 
			 	android:layout_height="wrap_content"
			 	android:layout_width="fill_parent"
			 	android:focusable="true"
			 	android:numeric="decimal"
			 	android:maxLength="4"
			 	android:editable="true"
			 	android:singleLine="true"/>
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/sort"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_sort"/>
			<Spinner android:id="@+id/spinner_sort"
			 android:prompt="@string/sort"
			 android:focusable="true"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:drawSelectorOnTop="true"/>
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
		</LinearLayout>
	</ScrollView>
	<RelativeLayout
		 android:layout_alignParentBottom="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/BottomBar"
		 android:background="#DDD6C6"
		 android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/button_howto_library" 
		 android:text="@string/howto"
		 android:layout_alignParentLeft="true"/>
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/button_search"
		 android:textStyle="bold"
		 android:text="@string/search"
		 android:layout_centerInParent="true"/>
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/button_clear" 
		 android:text="@string/clear"
		 android:layout_alignParentRight="true"/>
	</RelativeLayout>
</RelativeLayout>
